--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,14 @@
 		    <artifactId>hibernate-validator</artifactId>
 		    <version>5.2.4.Final</version>
 		</dependency>
-		
+
+		<!-- JSON - Java Script Object Notation -->					
+
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.11</version>
+		</dependency>
 		
 		<!-- Persitencia -->					
 		<dependency>
