--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,14 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.2.4.Final</version>
 		</dependency>
+		
+		<!--  JSON - Java Spring Object Notation -->
 
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.11</version>
+		</dependency>
 
 		<!-- Persitencia -->
 		<dependency>
