--- a/pom.xml
+++ b/pom.xml
@@ -42,14 +42,14 @@
 			<version>${org.springframework-version}</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
 		<dependency>
-		    <groupId>commons-dbcp</groupId>
-		    <artifactId>commons-dbcp</artifactId>
-		    <version>1.2.2</version>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.2.2</version>
 		</dependency>
-				
+
 
 
 		<!-- AspectJ -->
@@ -155,6 +155,13 @@
 			<version>${mysql.version}</version>
 		</dependency>
 
+		<!-- JSON -->
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.11</version>
+		</dependency>
+
 
 		<!-- Test -->
 		<dependency>
@@ -227,7 +234,7 @@
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
-					</execution>					
+					</execution>
 				</executions>
 				<configuration>
 					<destFile>${sonar.jacoco.reportPath}</destFile>
@@ -235,11 +242,13 @@
 			</plugin>
 
 		</plugins>
-		
-		<!-- Excluir goals del ciclo de vida de Maven en Eclipse, para evitar error plugin jacoco -->
+
+		<!-- Excluir goals del ciclo de vida de Maven en Eclipse, para evitar error 
+			plugin jacoco -->
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -270,7 +279,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		
-		
+
+
 	</build>
 </project>
