--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,21 @@
 		</dependency>
 
 
+		<!-- Apache Commons FileUpload -->
+ 		<dependency>
+ 			<groupId>commons-fileupload</groupId>
+ 			<artifactId>commons-fileupload</artifactId>
+ 			<version>1.3.1</version>
+ 		</dependency>
+ 
+ 		<!-- Apache Commons IO -->
+ 		<dependency>
+ 			<groupId>commons-io</groupId>
+ 			<artifactId>commons-io</artifactId>
+ 			<version>2.4</version>
+ 		</dependency>
+
+
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
