--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
 	
 	<filter-mapping>
 	    <filter-name>corsFilter</filter-name>
-	    <url-pattern>/*</url-pattern>
+	    <url-pattern>*</url-pattern>
 	</filter-mapping>
 	
 	 <filter>
